--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="bg-slate-900">
 
     <!-- Navbr start -->
-     <section class="header">
+     <section class="header bg-slate-900 sticky top-0">
         <div class="header-content flex justify-between items-center px-5">
             <div class="header-logo">
                 <img src="images/92447cf8-3365-4743-aa87-081a735fcf69.png" alt="">
@@ -46,9 +46,9 @@
 
      <!-- Banner start -->
 
-    <section class=" main-banner py-20">
+    <section class=" main-banner py-20 ">
         <div class="container mx-auto">
-            <div class="banner  flex justify-between items-center">
+            <div class="banner flex justify-between items-center">
                 <div class="banner-left"> 
                     <h1 class="inline bg-gradient-to-r from-indigo-200 via-sky-400 to-indigo-200 bg-clip-text font-display text-5xl tracking-tight text-transparent">Never miss the cache again.</h1>
                     <p class="mt-3 text-2xl tracking-tight text-slate-400">Cache every single thing your app could ever do ahead of time,<br>so your code never even has to run at all.</p>
@@ -61,6 +61,7 @@
                     <img src="images/38af112e-276b-40f0-8a88-fa145396ff34.png" alt="">
                 </div>
              </div>
+            </div>
         </div>
     </section>
 
@@ -73,7 +74,7 @@
         <div class="container mx-auto">
               <div class="main-body grid grid-cols-4 gap-10">
 
-                <div class="body-item">
+                <div class="body-item-one">
                    <nav>
                     <h2 class="font-medium text-white pb-3">Introduction</h2>
                     <ul class="mx-5 pb-7">
@@ -148,7 +149,7 @@
                  
                 </div>
 
-                <div class="body-item col-span-2">
+                <div class="body-item-two col-span-2">
 
                   <div class="body-center ">
                     <p class="text-sm font-medium text-sky-500 pb-3">Introduction</p>
